Fixed text overlapping on small screens

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -65,7 +65,6 @@ footer p {
 
 .about_mission .row{
   background-color: #B4D8D7;
-  height: 450px;
 }
 
 .about_mission .content{
